Morhomlo, Sinacin Science, Phyre Mass
* Add orbit icons to the Ollo system.
* Add Morhomlo, an asteroid in a nice friendly easy-to-reach circular orbit in the Arriprit (early game-) Belt. Includes biome map.
* Complete science definitions for Sinacin system with stock experiments.
* Change some of the Sinacin system's configs to fix some Biome names.
* Increase Phyre and Wepor's density substantially.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/5-Fish.cfg
@@ -34,7 +34,7 @@
         }
         Orbit
         {
-            //iconTexture = 
+            iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
             referenceBody = PJ2/Ollo
             color = #685d4c
             inclination = 15
