--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/Drae.cfg
@@ -324,7 +324,7 @@
 				}
 				VertexColorMap
 				{
-					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_color.dds
+					map = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_c/PluginData/Drae_color.png
 					order = 3
 				}
 			}
