--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_A_Rangon.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_A_Rangon.cfg
@@ -47,8 +47,8 @@
 				}
 				Biome
 				{
-					name = Dusty Lowlands
-					displayName = Frigid Winds
+					name = Dusty_Lowlands
+					displayName = Dusty Lowlands
 					color = RGBA(0,0,0,255)
 					value = 1.5
 				}
