--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_Alia.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/IlioC_f_D_Alia.cfg
@@ -75,7 +75,7 @@
 				Biome
 				{
 					name = Highlands
-					displayName = Volcano Flank
+					displayName = Highlands
 					color = RGBA(133,34,17,255)
 					value = 1.3
 				}
