--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
@@ -14,9 +14,9 @@
 			description = Phrye-Wepor is a binary asteroid system orbiting Kialla at a distance. This makes it somewhat unique, being a circumbinary binary system. Additionally, the twin asteroids themselves are quite interesting--despite being the same size, Phrye is more than twice as massive, and they each have roughly opposite spectral features. Overall, this makes for quite an interesting destination, if you can make it out this far.\n-electricpants
 			displayName = Phyre-Wepor Barycenter^N
 			radius = 9000
-			mass = 8.03e15
+			mass = 1.3043e17
 			
-			//2.51e15+5.52e15
+			//5.02e16+8.023e16
 			//semimajoraxis = 40000
 			//SMA_A = 12503.1133
 			//SMA_B = 27496.8867
