--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/2-Soval.cfg
@@ -33,7 +33,7 @@
         }
         Orbit
         {
-            //iconTexture = 
+            iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Small.png
             referenceBody = PJ2/Ollo
             color = #2a2927
             inclination = 0.0002
