--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/3-Fourcroy.cfg
@@ -51,7 +51,7 @@
         }
         Orbit
         {
-            //iconTexture = 
+            iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Icons/SpaceObject_Mid.png
             referenceBody = PJ2/Ollo
             color = #434241
             inclination = 0.0001
