--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_b/4-Conscience.cfg
@@ -57,7 +57,7 @@
         }
         Orbit
         {
-            //iconTexture = 
+            iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/MoonSmallest_Icon.png
             referenceBody = PJ2/Ollo
             color = #6e6d6b
             inclination = 0.002
