--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_1_Phrye.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_1_Phrye.cfg
@@ -14,7 +14,9 @@
 		{
 			description = Phrye is a binary asteroid, with its companion being Wepor. They both orbit around Kialla, and of the two, Phrye is the primary companion. Phrye has an extremely low average albedo, with the exception of a few very specific areas on its surface. It is thought that these may be a large impact craters or depressions, which expose a layer of buried ice, increasing the reflectivity of these areas in comparison to the rest of Phrye's surface. [electricpants]
 			radius = 10500
-			mass = 4.01500e15
+			//mass = 4.01500e15 //this was changed because it was about 20 times too low.
+			mass = 8.023e16
+			//fixed density = 1.439 g/cm^3 (at kerbal scale)
 			tidallyLocked = true
 			albedo = 0.1
 			sphereOfInfluence = 20000
@@ -53,7 +55,7 @@
 		{
 			referenceBody = PJ2/BarycenterPW
 			semiMajorAxis = 12503.1133
-			period = 68669.61080261099
+			period = 17038.58838573225
 			eccentricity = 0
 			inclination = 0
 			longitudeOfAscendingNode = 0
