--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_2_Wepor.cfg
@@ -14,7 +14,9 @@
 		{
 			description = Wepor is a binary asteroid, with its companion being Phrye. They both orbit around Kialla, and of the two, Wepor is the secondary companion. Wepor, as opposed to its more massive companion, is much brighter and icier, and in fact has one of the highest abledos of any object in the solar system--however, it has areas of notably lower albedo. Interestingly, despite being the same size as Phrye, Wepor is only around half its mass, making it notably less dense than Phrye. [electricpants]
 			radius = 10500
-			mass = 2.51e15
+			//mass = 2.51e15 //this was changed because it was about 20 times too low.
+			mass = 5.02e16
+			//fixed density = 0.9004 g/cm^3 (at kerbal scale)
 			tidallyLocked = true
 			albedo = 0.9
 			sphereOfInfluence = 20000
@@ -47,7 +49,7 @@
 		{
 			referenceBody = PJ2/BarycenterPW
 			semiMajorAxis = 27496.8867
-			period = 68669.61080261099
+			period = 17038.58838573225
 			eccentricity = 0
 			inclination = 0
 			longitudeOfAscendingNode = 0
