experimental kopernicus change
when used with an experimental build of Kopernicus, this should make Armstrong's atmosphere behave more realistically, with the hot part facing Pyri instead of Ilio.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Homeworld.cfg
@@ -11,6 +11,7 @@
     @Body:HAS[#identifier[PJ2/Armstrong]]
 	{
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/Cache/Armstrong.bin
+		forcedParentStar = Pyri
 		SpaceCenter
 		{
 			//note: correct heading by 228.4 degrees.
