Ilmar and Ulen Colormap
* New scaledspace, pqs, and normal maps for Ilmar and Ulen, by Techo.
* Tweak Ulen orbit line color.
* Slight change to Armstrong's description.
* Descriptions for the Tobalk-Turtlestar system by Wolf-Rayet.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_d/Ulen.cfg
@@ -58,7 +58,7 @@
 		Orbit
 		{
 			referenceBody = PJ2/Alkin
-			color = #b37548
+			color = 0.655806959,0.193439037,0.213122174,1
 			semiMajorAxis = 329115300
 			eccentricity = 0.0057
 			inclination = 0
