--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
@@ -16,7 +16,7 @@
 		Properties
 		{
 			displayName = Tobalk^N
-            description = A massive icy world in a distant orbit of Phosphol-Vespol with no atmosphere.\n\n -SnailsAttack
+            description = Tobalk is the final major planet of the Ilio System, or penultimate planet if you’re on the fence about Kialla. The strikingly white giant world, with its circular weather patterns and desaturated coloration give it a unique character among the giant planets, it’s been said, even from this distance, it closely resembles a would-be-small crater battered moon. In fact this resemblance is so strong that it motivated Hjorgan Mesolimlippiman to do the math and determine Tobalk’s density. The results of this calculation made a lot of sense, and were directly responsible for a statistically significant amount of face palming within planetary scientist circles.\n\n -SnailsAttack
             radius = 2550000
             mass = 3E24 //49.7 kEarth masses
             rotationPeriod = 11989.1198345043
