--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/1-Turtlestar.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/1-Turtlestar.cfg
@@ -11,7 +11,7 @@
         Properties
         {
             displayName = Turtlestar^N
-            description = A gas dwarf with only one-sixth the mass of Tobalk.\n\n -SnailsAttack
+            description = While Tobalk is a naked eye planet, its recognizable blue-hue comes from its nearby and proportionally larger companion, Turtlestar. This fact is the subject of many debates regarding the exact number of naked eye planets. Mirroring the Pyri System’s Sinacin-Glice, Turtlestar is larger in diameter than Tobalk but only 1/6 its mass, and it is wondered if the mechanisms that lead to solid worlds with gaseous moons are universal between the two systems, or entirely different. Whatever the case, statistically this must be a very common configuration, and one wonders why systems like it do not appear in any historical texts from any of Armstrong’s numerous migrant homeworlds.\n\n -SnailsAttack
             radius = 3050000
             mass = 4.95E23 //8.3 kEarth masses
             tidallyLocked = true
