--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
@@ -27,7 +27,7 @@
 		Properties
 		{
 			displayName = Hysnoon^N
-			description = Hysnoon is a pink-colored irregular satellite orbiting Tobalk. Hysnoon's retrograde orbit implies that it was captured from elsewhere, a seemingly common occurance around gas giants.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = Hysnoon is an unassuming and small moon, and physically there isn’t anything of note observable from Armstrong. However dynamically Hysnoon is extremely anomalous, as it has been found to occupy a retrograde orbit, plowing against the regular flow of the other Tobalan Satellites. It’s been concluded that for such an orbit to occur, Hysnoon must’ve been captured from elsewhere. Advantageously this allows it to remain fairly unperturbed by Turtlestar, even though it looms so close by.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 0 0 0 0 0 0 0
 			rotationPeriod = -67860
 			tidallyLocked = false
