Asteroid Ore, Biomes, Science, and Legal Name Changes
* Add incomplete text file for science balancing. will be turned to config file when it's finished.
* Standardize names and identifiers so they match the body's true name for the following bodies: Sandevistan, Garner, Naharosmank, Welkendon, Rider, Zhandar, Bifrost, Oynag, Viszra, Jejunum, Atrium, Cuspid, Fundus, Cricoid, Acic, Descry, Zeppeli, Pendle, Skle, Zzizel, Xeititit, Tobalk, Turtlestar, Hysnoon, Kialla, Twilight
* IRTA and/or SOI altitude changes for Quank, Ogoquo, Dord, Morhomlo,
* Garner description by Wolf-Rayet.
* More biomes for Garner.
* Science definitions for Morhomlo, Dord, and Garner.
* Remove Ore from stars and gas giants.
* Add higher Ore percentage for Rider, Schmev, Raft, Morhomlo, Quank, and Gershmurzelen.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/IlioAB_e_2_Sandevistan.cfg
@@ -5,7 +5,7 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = IlioAB_e2
+		name = Sandevistan
 		identifier = PJ2/Sandevistan
 		cacheFile = PJ2/KopernicusFiles/1_InnerSystem/IlioAB_e/Cache/Sandevistan.bin
 		Template
