--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Garner.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Garner
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_t_Garner/Cache/Garner.bin
-		identifier = PJ2/IlioC_b_greek
+		identifier = PJ2/Garner
 		Template
 		{
 			name = Minmus
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Garner^N
-			description = Garner is the minor planet that leads ahead of [Armstrong] in its orbit. It's been seen as one of the obvious first targets for exploration.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = Garner is the minor planet that leads ahead of Armstrong in its orbit, and its discovery was the conclusion to what had been one of the most dramatic cosmological debates in history. What was the balance of Lu? The endeavor to reach Armstrong's leading terminator was treacherous, but when Ploob Kerman and her expeditionary team first noticed the strange teal orb just barely peeking from behind the mountains, they were overwhelmed with joy, a new planet blessed the brightening skies. Garner rose higher into the sky as they travelled eastward, and its strange bi-colored nature was observed for the first time. Finally Armstrong's orbit around Pyri was once again in a known, cosmologically satisfyingly balance. This is, of course, disregarding Garner's dramatically smaller size compared to Lu, or that they are not truly on opposing sides of Pyri at all. Minor details aside, people would remain satisfied by the existence of Garner for at least a fair while.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 60060
 			tidallyLocked = true
 			initialRotation = 200
@@ -38,8 +38,36 @@
 				Biome
 				{
 					name = Flat
-					displayName = Antipyrian Flats
+					displayName = Contra Regiones, the Antipyrian Flats
 					color = #ddf8d7
+					value = 1
+				}
+				Biome
+				{
+					name = NorthFlat
+					displayName = Lacus Borealis, the Northern Flats
+					color = #9df1be
+					value = 1
+				}
+				Biome
+				{
+					name = SouthFlat
+					displayName = Lacus Australis, the Southern Flats
+					color = #445ccb
+					value = 1
+				}
+				Biome
+				{
+					name = AHighlands
+					displayName = Antipyrian Highlands
+					color = #ff88d5
+					value = 1
+				}
+				Biome
+				{
+					name = ALowlands
+					displayName = Antipyrian Lowlands
+					color = #ffc1c8
 					value = 1
 				}
 				Biome
@@ -51,16 +79,30 @@
 				}
 				Biome
 				{
+					name = PolarCrater
+					displayName = Polar Craters
+					color = #3a1300
+					value = 1
+				}
+				Biome
+				{
 					name = Highlands
-					displayName = Highlands
+					displayName = Synpyrian Highlands
 					color = #e57c69
 					value = 1
 				}
 				Biome
 				{
 					name = Lowlands
-					displayName = Lowlands
+					displayName = Synpyrian Lowlands
 					color = #ceb494
+					value = 1
+				}
+				Biome
+				{
+					name = Slope
+					displayName = Slopes
+					color = #9ebee4
 					value = 1
 				}
 			}
