--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/1_Asteroid_SubArmstrongDord.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/1_Asteroid_SubArmstrongDord.cfg
@@ -20,6 +20,8 @@
 			radius = 33523
 			initialRotation = 145
 			tidallyLocked = True
+			sphereOfInfluence = 57036
+			inverseRotThresholdAltitude = 21513
 			
 			//density = 6.75 gcm3
 			mass = 1.0658e19
