--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/5_Asteroid_Morhomlo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/5_Asteroid_Morhomlo.cfg
@@ -18,7 +18,8 @@
 			initialRotation = 5
 			tidallyLocked = true
 			timewarpAltitudeLimits = 0 1 2 4 8 16 32
-
+			sphereOfInfluence = 70000
+			inverseRotThresholdAltitude = 38000
 			//the radius given in the template is the average radius. If you use a shapemap, consider reducing the ksp "sea level" radius to keep the average radius the same.
 			radius = 30992
 			
