--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/9_Asteroid_Rider.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/9_Asteroid_Rider.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		//you can change the name and displayName but please do not change the identifier.
-		name = IlioC_Rider
+		name = Rider
 		identifier = PJ2/Ast_Rider
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Cache/Rider.bin
 		Template
