--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/Luna/Luna'sAsteroidsScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/Luna/Luna'sAsteroidsScienceDefs.cfg
@@ -10,7 +10,23 @@
 		
 		RiderInSpace = Rider's shape is like something of an oblate potato, but oddly, it seems to be lying on its side. Shouldn't Rider tumble on its intermediate axis?
 		
-		DordInSpace = Impact craters are suspiciously sparse on Dord, indicating recent geological activity.
+		
+		DordInSpaceHigh = Dord's sphere of influence is rather small, and Pyri's tidal influence can make navigation difficult. You place your trust in the stationkeeping systems, and strongly hope that they hold it well.
+		DordInSpaceLow = The innermost planet... is where you came from. But the innermost dwarf planet looms below. The distinction sounds a little silly when you say it in your head, but regardless Dord has been a fair challenge to reach.
+		DordSrfLandedNearHigh = Setting internal climate control systems to low and flight suit cooling systems to maximum.
+		DordSrfLandedNearLow = Setting internal climate control systems to low and flight suit cooling systems to maximum.
+
+		DordSrfLandedFarHigh = Setting internal climate systems to high and flight suit heating systems to maximum.
+		DordSrfLandedFarLow = Setting internal climate systems to high and flight suit heating systems to maximum.
+
+		DordSrfLandedIrisCrater = Crater bowls basins can make navigation and landing difficult, while their floors are relatively flat, the walls are rather steep.
+		DordSrfLandedNearCraters = Crater bowls basins can make navigation and landing difficult, while their floors are relatively flat, the walls are rather steep.
+		DordSrfLandedFarCraters = Crater bowls can make navigation and landing difficult, while their floors are relatively flat, the walls are rather steep.
+
+		DordSrfLandedIris = The Iris has a lot of almost folding potentially volcanic features radiating from Mare Pupil, and almost rubbly flanks radiating inwards from its concerntric ridgelines.
+		DordSrfLandedConcentricRidges = The terrain here creates intensive navigational challenges, the event that created it may have as equally as dramatic and intense as the ridges that resulted.
+
+		DordSrfLandedPupil = You've been waiting the entire flight to say this: "Bull's Eye."
 	
 	}
 }
@@ -51,6 +67,7 @@
 		WeegletossSouthBasin = This "basin" (though by the standards of any other world it'd be a mere minor depression) seems to have a smoother surface than other parts of Weegletoss, except for the largest of boulders in the area.
 		WeegletossNorthBasin = This "basin" (though by the standards of any other world it'd be a mere minor depression) seems to have a smoother surface than other parts of Weegletoss, except for the largest of boulders in the area.
 		
+		DordInSpace = Impact craters are suspiciously sparse on Dord, indicating recent geological activity.
 		DordSrfLanded = You search the skies for the other planets. Is Armstrong up? Wait... is THAT it?
 		DordSrfLandedIris = The terrain is relatively flat here.
 		DordSrfLandedPupil = The terrain is almost perfectly flat here, and very dark. Is it your imagination or is the surface kind of... sticky?
