--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/ScienceDefs/WolfRayet/ScienceDefs.cfg
@@ -5,7 +5,7 @@
 		
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			Values
 			{
 				InSpaceHigh = Naharosmank looms closer! Getting a good look out the window confirms: it's quite the rock.
@@ -19,7 +19,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			Values
 			{
 				SrfLandedPuzzle = A wise man once said that Deja Vu is just remembering in the wrong direction. Regardless of which direction the feeling goes, it hits you for some reason.
@@ -70,7 +70,7 @@
 		
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				InSpaceLow = Looking around is a calculated risk you feel, on the way here a micrometeorite hit the spacecraft, ultimately harmlessly, but you feel the visor of your spacesuit would not be so sturdy.
 				InSpaceHigh = Looking around is a calculated risk you feel, on the way here a micrometeorite hit the spacecraft, ultimately harmlessly, but you feel the visor of your spacesuit would not be so sturdy.
@@ -85,7 +85,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			Values
 			{
 				SrfLandedPuzzle = You take detailed observations of the shapes and forms of this strange region. You hope the exact mechanisms that created it might some day be understood. The scientist talking to you back home says he'll let you know how the story develops.
@@ -136,7 +136,7 @@
 		
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				SrfLandedGeneric = Naharosmank has a very stony composition, it's all sillicates without the faintest indication of metal or volatiles here.
 				SrfLandedPuzzle = This region its hard to distinguish compositionally from the rest of the asteroid, although, there are some indications of heavier elements in the dust here, vague hints of shiny metal deposits as you dig deeper. It's almost like you're looking deeper into Naharosmank, but you're right on the surface. Unless, a part of Naharosmank broke off here... but where would it have gone?
@@ -147,7 +147,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				SrfLandedGeneric = Welkendon has a very stony composition, it's all sillicates without the faintest indication of metal or volatiles here.
 				SrfLandedPuzzle = This region its hard to distinguish compositionally from the rest of the asteroid, although, there are some indications of heavier elements in the dust here, vague hints of shiny metal deposits as you dig deeper. It's almost like you're looking deeper into Welkendon, but you're right on the surface. Unless, a part of Welkendon broke off here... but where would it have gone?
@@ -190,7 +190,7 @@
 	{
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				InSpaceHigh = While not the hottest asteroid, Naharosmank is still far from habitable temperatures even when it's furthest from Pyri.
 				InSpaceLow = While not the hottest asteroid, Naharosmank is still far from habitable temperatures even when it's furthest from Pyri.
@@ -203,7 +203,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				InSpaceHigh = While not the hottest asteroid, Welkendon is still far from habitable temperatures even when it's furthest from Pyri.
 				InSpaceLow = While not the hottest asteroid, Welkendon is still far from habitable temperatures even when it's furthest from Pyri.
@@ -249,7 +249,7 @@
 	{
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				InSpaceHigh = There is no air around Naharosmank.
 				InSpaceLow = There is no air around Naharosmank.
@@ -258,7 +258,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				InSpaceHigh = There is no air around Welkendon.
 				InSpaceLow = There is no air around Welkendon.
@@ -291,7 +291,7 @@
 	{
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				InSpaceHigh = No magnetic field is detected around Naharosmank.
 				InSpaceLow = No magnetic field is detected around Naharosmank.
@@ -299,7 +299,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				InSpaceHigh = No magnetic field is detected around Welkendon.
 				InSpaceLow = No magnetic field is detected around Welkendon.
@@ -329,14 +329,14 @@
 	{
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				SrfLanded = Naharosmank is geologically dead, though long enough observation times may allow you to detect impact events.
 			}
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				SrfLanded = After a bit of monitoring, an imapct event is detected! One can't help but wonder if there will come a time when only large asteroids remain in the Arriprit Belt, with small rocks meeting their fate in impact events.
 			}
@@ -363,7 +363,7 @@
 	{
 		Body
 		{
-			name = PJ2/Ast_LostHalf1 //Naharosmank
+			name = PJ2/Ast_Naharosmank //Naharosmank
 			{
 				InSpaceHigh = The goo dies. Yeah, who would've seen that coming, huh? What? You want us to go into detail? You want us to tell you how the vacuum of space is dangerous in vivid detail? Disgusting.
 				InSpaceLow = The goo dies. Yeah, who would've seen that coming, huh? What? You want us to go into detail? You want us to tell you how the vacuum of space is dangerous in vivid detail? Disgusting.
@@ -373,7 +373,7 @@
 		}
 		Body
 		{
-			name = PJ2/Ast_LostHalf2 //Welkendon
+			name = PJ2/Ast_Welkendon //Welkendon
 			{
 				InSpaceHigh = The goo begins to boil, and in an attempt to form itself a cyst, it ends up only trapping even more heat, it fizzes and pops, creating a great mess of the inside of the container as it... what's wrong? Oh, sorry, too much. Needless to say, the vacuum of space is dangerous.
 				InSpaceLow = The goo begins to boil, and in an attempt to form itself a cyst, it ends up only trapping even more heat, it fizzes and pops, creating a great mess of the inside of the container as it... what's wrong? Oh, sorry, too much. Needless to say, the vacuum of space is dangerous.
