--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Bifröst
-		identifier = PJ2/IlioC_e
+		identifier = PJ2/Bifrost
 		
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/Cache/BifrostOblate.bin
 		Template
