--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1-Mani.cfg
@@ -76,7 +76,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Big_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.78,0.498,0,1
-			referenceBody = PJ2/IlioC_e
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 35880913
 			eccentricity = 0.006		//As the least eccentric of the triplet, this moon is the least active. However, tidal heat flux is still 50x that of Io, and 100x when factoring in the larger surface area of the moon.
 			inclination = 0.04
