--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1q-Ljos.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1q-Ljos.cfg
@@ -74,7 +74,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Small_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.43,0.11,0.02,1
-			referenceBody = Bifröst
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 35880913
 			eccentricity = 0.122	//As a quasisatellite, Ljós is forced into a high eccentricity orbit, leading to enormous tidal heat fluxes 20600x those Io receives, leading to tempeatures over 1000K. Even considering its miniscule size, total loads are still 28x Io as a result.
 			inclination = 4.29
