--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/1t-Bil.cfg
@@ -80,7 +80,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Big_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.46,0.48,0.58,1
-			referenceBody = Bifröst
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 35880913
 			eccentricity = 0.022		//Bil's tadpole orbit keeps its eccentricity slightly high, which has marked tidal heating effects: 670x the flux Io gets, though "only" 470x in total absolute amount with its smaller size.
 			inclination = 1.16
