--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/3-Thorr.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/3-Thorr.cfg
@@ -65,7 +65,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Small_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.45,0.42,0.40,1
-			referenceBody = Bifröst
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 129893785
 			eccentricity = 0.011
 			inclination = 0.04
