--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/4-Jotunn.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/4-Jotunn.cfg
@@ -61,7 +61,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Big_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.714,0.627,0.663,1
-			referenceBody = PJ2/IlioC_e
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 220219651
 			eccentricity = 0.134			//In the middle of its 11 year long, approximately 0.05-0.22 eccentricity cycle.
 			inclination = 176.55			//Retrograde
