--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
@@ -4,7 +4,7 @@
 	{
 		name = Viszra
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Viszra.bin
-		identifier = PJ2/IlioABC_b_b
+		identifier = PJ2/Viszra
 		Template
 		{
 			name = Vall
@@ -76,7 +76,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.434,0.128,0.128,1
