--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
@@ -4,7 +4,7 @@
 	{
 		name = Jejunum
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Jejunum.bin
-		identifier = PJ2/IlioABC_b_c
+		identifier = PJ2/Jejunum
 		Template
 		{
 			name = Moho
@@ -60,7 +60,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.929,0.333,0.137,1
