--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3B_Cuspid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3B_Cuspid.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Cuspid
-		identifier = PJ2/IlioABC_b_Atrojan_b
+		identifier = PJ2/Cuspid
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Cuspid.bin
 		Template
 		{
@@ -48,7 +48,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b_d
+			referenceBody = PJ2/Atrium
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.533,0.408,0.392,1
