--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3_Atrium.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3_Atrium.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Atrium
-		identifier = PJ2/IlioABC_b_d
+		identifier = PJ2/Atrium
 		Template
 		{
 			name = Jool //placeholder
@@ -31,7 +31,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.173,0.263,0.463,1
