--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Acic
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Acic.bin
-		identifier = PJ2/IlioABC_b_g
+		identifier = PJ2/Acic
 		Template
 		{
 			name = Gilly
@@ -54,7 +54,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.463,0.424,0.424,1
