--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G0_Descry.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G0_Descry.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Descry
-		identifier = PJ2/IlioABC_b_greek
+		identifier = PJ2/Descry
 		Template
 		{
 			name = Jool //placeholder
