--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Zeppeli
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Zeppeli.bin
-		identifier = PJ2/IlioABC_b_greek_b
+		identifier = PJ2/Zeppeli
 		Template
 		{
 			name = Eeloo
@@ -69,7 +69,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b_greek
+			referenceBody = PJ2/Descry
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.641,0.402,0.314,1
