--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G2_Pendle.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G2_Pendle.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Pendle
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Pendle.bin
-		identifier = PJ2/IlioABC_b_greek_c
+		identifier = PJ2/Pendle
 		Template
 		{
 			name = Eeloo
@@ -62,7 +62,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b_greek
+			referenceBody = PJ2/Descry
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.698,0.694,0.694,1
