--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA2_Skle.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA2_Skle.cfg
@@ -57,7 +57,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b_Atrojan
+			referenceBody = PJ2/Zzizel
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE:
 			color = 0.546,0.626,0.626,1
