--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA_Zzizel.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TA_Zzizel.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Zzizel
-		identifier = PJ2/IlioABC_b_Atrojan
+		identifier = PJ2/Zzizel
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Zzizel.bin
 		Template
 		{
