--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/TB_Xeititit.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Xeititit
-		identifier = PJ2/IlioABC_b_Btrojan
+		identifier = PJ2/Xeititit
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Xeititit.bin
 		Template
 		{
