--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/0-Tobalk.cfg
@@ -7,7 +7,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Tobalk
         cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/Cache/Tobalk.bin
-		identifier = PJ2/IlioABC_c
+		identifier = PJ2/Tobalk
 		Template
 		{
             name = Tylo
