--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/1-Turtlestar.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/1-Turtlestar.cfg
@@ -27,7 +27,7 @@
         Orbit
         {
             //iconTexture = 
-            referenceBody = Tobalk
+            referenceBody = PJ2/Tobalk
             inclination = 0.00008
             eccentricity = 0.0001
             semiMajorAxis = 9000000
