--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/2-Hysnoon.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Hysnoon
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/Cache/Hysnoon.bin
-		identifier = PJ2/IlioABC_c_w
+		identifier = PJ2/Hysnoon
 		Template
 		{
 			name = Tylo
@@ -69,7 +69,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_c
+			referenceBody = PJ2/Tobalk
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.678,0.579,0.584,1
