--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/3-Hidalgo.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/3-Hidalgo.cfg
@@ -49,7 +49,7 @@
         }
         Orbit
         {
-            referenceBody = Tobalk
+            referenceBody = PJ2/Tobalk
             color = #904c2c
             inclination = 0.2
             eccentricity = 0.035
