--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_c/4-Pi.cfg
@@ -44,7 +44,7 @@
         }
         Orbit
         {
-            referenceBody = Tobalk
+            referenceBody = PJ2/Tobalk
             color = #4f4e4d
             inclination = 2.1
             eccentricity = 0.2
