--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/0_Kialla.cfg
@@ -7,7 +7,7 @@
 	{
 		name = Kialla
 		cacheFile = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/Cache/Kialla.bin
-		identifier = PJ2/IlioABC_d
+		identifier = PJ2/Kialla
 		Template
 		{
 			name = Eeloo
