--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/1_Moxxie.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/1_Moxxie.cfg
@@ -29,7 +29,7 @@
 			{
 				Body
 				{
-					body = PJ2/IlioABC_d
+					body = PJ2/Kialla
 					probability = 100
 					reached = false
 					semiMajorAxis
