--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/2_Blitzø.cfg
@@ -45,7 +45,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_d
+			referenceBody = PJ2/Kialla
 			semiMajorAxis = 322640
 			eccentricity = 0.012
 			inclination = 0.157
