--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
@@ -53,7 +53,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_d
+			referenceBody = PJ2/Kialla
 			semiMajorAxis = 697380
 			eccentricity = 0.0082
 			inclination = 0.657
