--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/4_0_BarycenterPW.cfg
@@ -24,7 +24,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_d
+			referenceBody = PJ2/Kialla
 			semiMajorAxis = 8103927
 			eccentricity = 0.092
 			inclination = 1.684
