--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/5_Twilight.cfg
@@ -2,9 +2,9 @@
 {
 	Body
 	{
-		name = ???
+		name = Twilight
 		cacheFile = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/Cache/Twilight.bin
-		identifier = PJ2/???
+		identifier = PJ2/Twilight
 		Template
 		{
 			name = Eeloo
@@ -45,7 +45,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_d
+			referenceBody = PJ2/Kialla
 			semiMajorAxis = 13238576
 			eccentricity = 0.327
 			inclination = 2.14
