--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/2_Asteroid_LostHalf1Naharosmank.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/2_Asteroid_LostHalf1Naharosmank.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Naharosmank
-		identifier = PJ2/Ast_LostHalf1
+		identifier = PJ2/Ast_Naharosmank
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Cache/Naharosmank.bin
 		Template
 		{
