--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/4_Asteroid_LostHalf2Welkendon.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/4_Asteroid_LostHalf2Welkendon.cfg
@@ -4,7 +4,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Welkendon
-		identifier = PJ2/Ast_LostHalf2
+		identifier = PJ2/Ast_Welkendon
 		cacheFile = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/Cache/Welkendon.bin
 		Template
 		{
