--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/IlioC_Gd_Zhandar.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_Giant/IlioC_Gd_Zhandar.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Zhandar
-		identifier = PJ2/IlioC_GIANT_d
+		identifier = PJ2/Zhandar
 		Template
 		{
 			name = Jool //placeholder
