--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/2-Heimdall.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/2-Heimdall.cfg
@@ -72,7 +72,7 @@
 		{
 			iconTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Big_Icon.png		//Custom icon reused from Edge of Eternity
 			color = 0.54,0.56,0.58,1
-			referenceBody = Bifröst
+			referenceBody = PJ2/Bifrost
 			semiMajorAxis = 89910704
 			eccentricity = 0.019
 			inclination = 0.02
