--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/0_Oynag.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/0_Oynag.cfg
@@ -6,7 +6,7 @@
 	{
 		//you can change the name and displayName but please do not change the identifier.
 		name = Oynag
-		identifier = PJ2/IlioABC_b
+		identifier = PJ2/Oynag
 		Template
 		{
 			name = Jool //placeholder
