--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/4_Fundus.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/4_Fundus.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Fundus
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Fundus.bin
-		identifier = PJ2/IlioABC_b_e
+		identifier = PJ2/Fundus
 		Template
 		{
 			name = Eeloo
@@ -61,7 +61,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.619,0.631,0.521,1
