--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
@@ -5,7 +5,7 @@
 		//you can change the name and displayName but please do not change the identifier.
 		name = Cricoid
 		cacheFile = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Cache/Cricoid.bin
-		identifier = PJ2/IlioABC_b_f
+		identifier = PJ2/Cricoid
 		Template
 		{
 			name = Minmus
@@ -61,7 +61,7 @@
 		}
 		Orbit
 		{
-			referenceBody = PJ2/IlioABC_b
+			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.494,0.657,0.624,1
